Correction du mauvais affichage de la page about : le footer n'était pas poussé en bas de page et les collapses étaient trop gros lors de la diminution de taille d'écran.

--- a/public/styles/components/collapse.scss
+++ b/public/styles/components/collapse.scss
@@ -7,13 +7,8 @@
   }
   
   .collapse-title {
-    font-family: Montserrat;
-    font-size: 1.5vh;
-    font-style: normal;
     background-color: #FF6060;
-    color: white;
     padding: 10px 20px;
-    cursor: pointer;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -22,11 +17,19 @@
     border-radius: 10px;
   }
 
+  .collapse-title h2 {
+    font-family: Montserrat;
+    font-size: 1.5vh;
+    font-style: normal;
+    color: white;
+    cursor: pointer;
+  }
+
   .about-collapse-container {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
     width: calc(100% - 400px);
   }
 
@@ -44,9 +47,9 @@
   .arrow.open {
     transform: rotate(180deg);
   }
-  
-  
+
   .collapse-content {
+    display: none;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.6s ease, opacity 0.6s ease, transform 0.6s ease;
@@ -58,6 +61,7 @@
   }
   
   .collapse-content.open {
+    display: block;
     max-height: 100%;
     opacity: 1;
     transform: translateY(0);
