--- a/public/styles/pages/about.scss
+++ b/public/styles/pages/about.scss
@@ -2,4 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 80vh;
+  }
+
+  @media (min-width: 320px) and (max-width: 815px) {
+    .about {
+      min-height: 80vh;
+    }
   }
